# repo-radar

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  kb_pipeline.rs  lib.rs  main.rs  pipeline.rs
src/adapters/: mod.rs
src/adapters/analyzer/: mod.rs  repoforge.rs
src/adapters/categorizer/: keyword.rs  mod.rs
src/adapters/compare/: llm_compare.rs  mod.rs
src/adapters/crossref/: github_crossref.rs  mod.rs
src/adapters/filter/: github_metadata.rs  mod.rs
src/adapters/github/: mod.rs  readme_fetcher.rs
src/adapters/idea_extractor/: keyword.rs  mod.rs
src/adapters/kb/: llm_kb_analyzer.rs  mod.rs  sqlite_kb.rs
src/adapters/reporter/: console.rs  json.rs  markdown.rs  mod.rs
src/adapters/reporter/snapshots/: repo_radar__adapters__reporter__json__tests__json_output_snapshot.snap  repo_radar__adapters__reporter__markdown__tests__markdown_output_snapshot.snap
src/adapters/source/: github_skills.rs  github_trending.rs  hackernews.rs  mod.rs  reddit.rs  rss.rs
src/adapters/web/: assets.rs  auth.rs  error.rs  mod.rs  state.rs  templates.rs
src/adapters/web/handlers/: api.rs  compare.rs  dashboard.rs  diff.rs  mod.rs  pages.rs  scan.rs
src/domain/: analyzer.rs  categorizer.rs  compare.rs  crossref.rs  diff.rs  filter.rs  idea_extractor.rs  kb.rs  mod.rs  model.rs  reporter.rs  scorer.rs  semantic_search.rs  source.rs
src/infra/: cache.rs  error.rs  mod.rs  rate_limit.rs  repoforge.rs  scan_store.rs  seen.rs  sqlite_kb.rs
static/css/: app.css
static/js/: scan.js
templates/: base.html  compare.html  config.html  dashboard.html  diff.html  error.html  report_detail.html  reports.html
templates/partials/: diff_table.html  results_table.html  scan_progress.html
tests/: cli_tests.rs  full_pipeline_integration.rs  pipeline_integration.rs  port_contract_tests.rs  web_integration.rs
tests/fixtures/: fake_git.sh  fake_git_fail.sh  fake_git_slow.sh  fake_repoforge.sh  fake_repoforge_bad.sh  fake_repoforge_bad_json.sh  fake_repoforge_slow.sh  github_repo_response.json  sample_feed.xml
