[package]
name = "repo-radar"
version = "0.1.0"
edition = "2024"
description = "Feed-driven GitHub repo discovery engine with cross-reference analysis"
license = "MIT"
authors = ["Javier Zader <javierzader@hotmail.com>"]
repository = "https://github.com/JNZader/repo-radar"
keywords = ["github", "discovery", "rss", "repository", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
thiserror = "2"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
owo-colors = "4"
dirs = "6"
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
octocrab = { version = "0.44", default-features = false, features = ["default-client", "rustls", "rustls-ring", "retry", "timeout"] }
url = { version = "2", features = ["serde"] }
axum = { version = "0.8", features = ["macros"] }
askama = "0.15"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8"
serde_qs = "0.13"
mime_guess = "2"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.32"
tempfile = "3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
assert_matches = "1.5"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
